add changes made to styling, now using grids

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,43 @@
+.grid-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-areas: 
+  "sidenav header"
+  "sidenav navacross"
+  "sidenav content"
+  "sidenav about-me";
+}
+
 h1 {
   text-align: center;
   align-items: center;
   padding: 0;
-  /* margin: 0; */
+  grid-area: header;
+}
+
+.grid-item-2 {
+  grid-area: sidenav;
+}
+
+.grid-item-3 {
+  grid-area: navacross;
+}
+
+.grid-item-4 {
+  grid-area: content;
 }
 
 .side-nav {
-  height: 100%;
-  width: 200px;
-  position: fixed;
+  height: 400%;
+  width: 150px;
+  position: sticky;
   top: 0;
   left: 0;
   background-color: #111;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  list-style-type: none;
 }
 
 .side-nav a {
@@ -37,7 +60,7 @@ h1 {
   padding: 0;
   /* overflow: hidden; */
   background-color: white;
-  margin-left: 350px;
+  float: left;
 }
 
 .nav-across li {
@@ -45,14 +68,12 @@ h1 {
   float: left;
   list-style-type: none;
   font-size: 18px;
-  margin: 20px
+  margin: 20px;
 }
 
 .nav-across a {
   text-decoration: none;
   color: black;
-  display: block;
-  text-align: center;
 }
 
 .nav-across a:hover {
